# zhipu-usage-api

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
scripts/: sync-version.mjs
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LoginScreen.jsx  NoSubscription.jsx  SettingsDialog.jsx  UsageCard.jsx
