[package]
name = "zhipu-usage-monitor"
version = "3.2.1"
description = "智谱AI额度监控桌面悬浮窗应用"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zhipu_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
log = "0.4"
tauri-plugin-log = "2"
dirs = "6"
image = "0.25"
